--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>ולנטינה פטוב - אחות מוסמכת</title>
 </head>
 <body>
+  <img src="photo.png" alt="ולנטינה פטוב" style="max-width:200px;display:block;margin:20px auto;">
   <h1>ולנטינה פטוב</h1>
   <h2>אחות מוסמכת B.A</h2>
   <p>טיפולי בית באשקלון והסביבה:</p>
