--- a/ru.html
+++ b/ru.html
@@ -7,6 +7,7 @@
   <title>Валентина Петов - Медсестра</title>
 </head>
 <body>
+  <img src="photo.png" alt="Валентина Петов" style="max-width:200px;display:block;margin:20px auto;">
   <h1>Валентина Петов</h1>
   <h2>Дипломированная медсестра B.A</h2>
   <p>Услуги на дому в Ашкелоне и юге Израиля:</p>
@@ -19,6 +20,6 @@
   </ul>
   <p>📞 050-300-1474 | ✉️ Petov3@gmail.com</p>
   <a href="https://wa.me/972503001474">💬 Написать в WhatsApp</a><br>
-  <a href="index.html">Switch to Hebrew</a>
+  <a href="index.html">Переключиться на иврит</a>
 </body>
 </html>
