--- a/index.html
+++ b/index.html
@@ -2,24 +2,13 @@
 <!DOCTYPE html>
 <html lang="he" dir="rtl">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>ולנטינה פטוב - אחות מוסמכת</title>
+    <meta charset="UTF-8">
+    <title>ולנטינה פטוב - אחות מוסמכת</title>
 </head>
-<body>
-  <img src="photo.png" alt="ולנטינה פטוב" style="max-width:200px;display:block;margin:20px auto;">
-  <h1>ולנטינה פטוב</h1>
-  <h2>אחות מוסמכת B.A</h2>
-  <p>טיפולי בית באשקלון והסביבה:</p>
-  <ul>
-    <li>💉 זריקות</li>
-    <li>💧 עירוי</li>
-    <li>🩹 טיפול בפצעים</li>
-    <li>🚽 טיפול בעצירות</li>
-    <li>🏠 ביקורי בית</li>
-  </ul>
-  <p>📞 050-300-1474 | ✉️ Petov3@gmail.com</p>
-  <a href="https://wa.me/972503001474">💬 כתבו לי ב-WhatsApp</a><br>
-  <a href="ru.html">Переключиться на русский</a>
+<body style="font-family: sans-serif; background: #f9f9f9; text-align: center; padding: 50px;">
+    <h1>ולנטינה פטוב</h1>
+    <h2>אחות מוסמכת B.A</h2>
+    <p>טיפולי בית: זריקות, עירוי, טיפול בפצעים, בעצירויות, ביקורי בית ועוד</p>
+    <p>050-300-1474 | petov3@gmail.com</p>
 </body>
 </html>
