--- a/index.html
+++ b/index.html
@@ -4,11 +4,53 @@
 <head>
     <meta charset="UTF-8">
     <title>ולנטינה פטוב - אחות מוסמכת</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script>
+        function switchLang(lang) {
+            document.querySelectorAll('.lang').forEach(el => el.style.display = 'none');
+            document.querySelectorAll('.lang-' + lang).forEach(el => el.style.display = 'block');
+        }
+    </script>
 </head>
-<body style="font-family: sans-serif; background: #f9f9f9; text-align: center; padding: 50px;">
-    <h1>ולנטינה פטוב</h1>
-    <h2>אחות מוסמכת B.A</h2>
-    <p>טיפולי בית: זריקות, עירוי, טיפול בפצעים, בעצירויות, ביקורי בית ועוד</p>
-    <p>050-300-1474 | petov3@gmail.com</p>
+<body style="font-family: Arial, sans-serif; background-color: #f2f2f2; margin: 0; padding: 20px; text-align: center;">
+    <div style="max-width: 650px; margin: auto; background: #ffffff; padding: 20px; border-radius: 12px; box-shadow: 0 0 10px rgba(0,0,0,0.1);">
+        <div style="text-align: left;">
+            <button onclick="switchLang('he')" style="margin: 5px;">🇮🇱 עברית</button>
+            <button onclick="switchLang('ru')" style="margin: 5px;">🇷🇺 Русский</button>
+        </div>
+        <img src="photo.jpg" alt="ולנטינה פטוב" style="width: 160px; border-radius: 50%; margin-bottom: 20px;">
+
+        <!-- Hebrew version -->
+        <div class="lang lang-he" style="display: block;">
+            <h1 style="color: #333;">ולנטינה פטוב</h1>
+            <h2>אחות מוסמכת B.A</h2>
+            <p style="font-size: 18px; color: #666;">טיפולי בית באשקלון והדרום</p>
+            <ul style="list-style: none; padding: 0; text-align: right;">
+                <li>💉 זריקות</li>
+                <li>💧 עירוי</li>
+                <li>🩹 טיפולי פצע</li>
+                <li>🚽 טיפול בעצירויות</li>
+                <li>🏠 ביקורי בית</li>
+            </ul>
+            <p>📞 050-300-1474<br>✉️ petov3@gmail.com</p>
+            <a href="https://wa.me/972503001474" style="display: inline-block; margin-top: 20px; padding: 12px 20px; background-color: #25D366; color: white; text-decoration: none; border-radius: 8px;">שלח הודעה ב-WhatsApp</a>
+        </div>
+
+        <!-- Russian version -->
+        <div class="lang lang-ru" style="display: none;">
+            <h1 style="color: #333;">Валентина Петов</h1>
+            <h2>Дипломированная медсестра B.A</h2>
+            <p style="font-size: 18px; color: #666;">Медицинская помощь на дому в Ашкелоне и юге Израиля</p>
+            <ul style="list-style: none; padding: 0; text-align: left;">
+                <li>💉 Уколы</li>
+                <li>💧 Капельницы</li>
+                <li>🩹 Перевязки</li>
+                <li>🚽 Лечение запоров</li>
+                <li>🏠 Визиты на дом</li>
+            </ul>
+            <p>📞 050-300-1474<br>✉️ petov3@gmail.com</p>
+            <a href="https://wa.me/972503001474" style="display: inline-block; margin-top: 20px; padding: 12px 20px; background-color: #25D366; color: white; text-decoration: none; border-radius: 8px;">Написать в WhatsApp</a>
+        </div>
+    </div>
 </body>
 </html>
